--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
+.App{
+  width: 70%;
+  margin-left: 15%;
+}
+img{
+  width: 100%;
+}
+#movies-list{
+  display:flex;
+}
+#header{
+  width: 100%;
+  text-align: center;
+  background-color: rgb(30, 71, 99);
+}
+.movie{
+  width: 100%;
+  height: fit-content;
+  margin: 0 5px 0 5px ;
+  border: 1px solid rgb(213, 231, 240); 
+}
+.title{
+  padding: 3px 0 5px 0;
+  font-weight: bold;
+  font-size: 1.3rem;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.text-1{
+  padding: 3px 0 5px 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  border-top: 1px solid rgb(213, 231, 240); 
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.text-2{
+  padding: 3px 0 5px 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  border-top: 1px solid rgb(213, 231, 240); 
+}
+@media screen and (max-width: 680px) {
+  .App{
+    width: 80%;
+    margin-left: 10%;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 600px) {
+  .App{
+    width: 90%;
+    margin-left: 5%;
   }
-  to {
-    transform: rotate(360deg);
+}
+@media screen and (max-width: 520px) {
+  .App{
+    width: 95%;
+    margin-left: 2%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .App{
+    width: 95%;
+    margin-left: 2%;
+  }
+  #movies-list{
+    display:block;
   }
 }
