--- a/src/App.css
+++ b/src/App.css
@@ -4,20 +4,28 @@
 }
 img{
   width: 100%;
+  height: 70%;
 }
 #movies-list{
   display:flex;
 }
 #header{
   width: 100%;
+  height: 100px;
   text-align: center;
   background-color: rgb(30, 71, 99);
 }
+#head{
+  padding-top: 20px;
+}
 .movie{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
-  height: fit-content;
   margin: 0 5px 0 5px ;
   border: 1px solid rgb(213, 231, 240); 
+  cursor: pointer;
 }
 .title{
   padding: 3px 0 5px 0;
