--- a/src/components/details.css
+++ b/src/components/details.css
@@ -13,7 +13,7 @@
   align-items: center;
   justify-content: center;
 }
-.confirm-details{
+.confirm-details,.confirm{
     background-color: #fff;
     max-width: 500px;
     width: 100%;
@@ -22,6 +22,10 @@
     min-height: 300px;
     display: flex;
     flex-direction: column;
+}
+.confirm{
+    justify-content: center;
+    align-items: center;
 }
 .confirm-details p{
     margin-left: 10%;
