--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App{
-  width: 70%;
-  margin-left: 15%;
+  /* width: 70%;
+  margin-left: 15%; */
 }
 img{
   width: 100%;
@@ -8,15 +8,9 @@ img{
 }
 #movies-list{
   display:flex;
-}
-#header{
-  width: 100%;
-  height: 100px;
-  text-align: center;
-  background-color: rgb(30, 71, 99);
-}
-#head{
-  padding-top: 20px;
+    width: 70%;
+  margin-left: 15%;
+  margin-top: 50px;
 }
 .movie{
   display: flex;
